# joeynmt

./: .gitignore  .pylintrc  .readthedocs.yml  .style.yapf  .travis.yml  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  benchmarks.md  hubconf.py  joey_demo.ipynb  requirements.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: main.yml
configs/: default.yaml  iwslt14_deen_bpe.yaml  iwslt14_deen_bpe_early_stopping.yaml  iwslt14_deen_sp.yaml  iwslt_deen_bahdanau.yaml  iwslt_envi_luong.yaml  iwslt_envi_xnmt.yaml  jparacrawl_enja_sp.yaml  jparacrawl_jaen_sp.yaml  reverse.yaml  rnn_reverse.yaml  rnn_small.yaml  small.yaml  transformer_copy.yaml  transformer_iwslt14_deen_bpe.yaml  transformer_iwslt14_deen_bpe_small.yaml  transformer_iwslt14_deen_sp.yaml  transformer_jparacrawl_enja_sp.yaml  transformer_reverse.yaml  transformer_small.yaml  transformer_wmt17_ende.yaml  transformer_wmt17_lven.yaml  wmt17_ende_bpe.yaml  wmt17_ende_sp.yaml  wmt_ende_best.yaml  wmt_ende_default.yaml  wmt_lven_best.yaml  wmt_lven_default.yaml
docs/: JoeyNMT_v1.md  JoeyNMT_v2.md  benchmarks_v1.md  requirements.txt
docs/source/: api.rst  benchmarks.rst  changelog.rst  cli.rst  conf.py  configuration.rst  faq.rst  index.rst  install.rst  joeynmt.rst  modules.rst  overview.rst  resources.rst  tutorial.rst  usage.rst  visualization.rst
joeynmt/: __main__.py  attention.py  batch.py  builders.py  config.py  constants.py  data.py  data_loader.py  datasets.py  decoders.py  detokenizer.perl  embeddings.py  encoders.py  helpers.py  helpers_for_ddp.py  hub_interface.py  initialization.py  loss.py  metrics.py  model.py  plotting.py  prediction.py  search.py  tokenizers.py  training.py  transformer.py  transformer_layers.py  vocabulary.py
notebooks/: joey_demo.ipynb  joey_v1_demo.ipynb  tokenizer_tutorial_en.ipynb  tokenizer_tutorial_ja.ipynb  torchhub.ipynb
scripts/: average_checkpoints.py  build_vocab.py  discord_joey.py  generate_copy_task.py  generate_reverse_task.py  get_iwslt14_bpe.sh  get_iwslt14_sp.sh  get_iwslt15_envi.sh  get_jparaclawl.sh  normalize_japanese.py  plot_validations.py  preprocess_jparacrawl.py
test/unit/: __init__.py  test_attention.py  test_batch.py  test_data.py  test_dataset.py  test_decoder.py  test_embeddings.py  test_encoder.py  test_helpers.py  test_loss.py  (+10 more)
(+24 files in other folders)
