[metadata]
description-file = README.md

[isort]
profile = black
ensure_newline_before_comments = True
force_grid_wrap = 0
line_length = 88
lines_after_imports = 2
multi_line_output = 3
use_parentheses = True
known_third_party = torch
skip =
    __pycache__
    .github
    .git
    .ipynb_checkpoints
    configs
    docs

[flake8]
ignore = E121,E126,E203,E502,W503,W504
max-line-length = 88
exclude =
    __pycache__
    .github
    .git
    .ipynb_checkpoints
    configs
    docs

[yapf]
based_on_style = pep8
column_limit = 88
indent_dictionary_value = false
coalesce_brackets = true
allow_split_before_dict_value = false
force_multiline_dict = false
each_dict_entry_on_separate_line = false
indent_closing_brackets = false
dedent_closing_brackets = true
split_before_named_assigns = true
split_all_comma_separated_values = false
